[gd_scene load_steps=16 format=3 uid="uid://blvfyylfyj1bb"]

[ext_resource type="PackedScene" uid="uid://c62liigg2yejs" path="res://characters/player.tscn" id="1_wntg6"]
[ext_resource type="Script" path="res://levels/level_1.gd" id="1_wv010"]
[ext_resource type="Texture2D" uid="uid://dd2jo0xdrnqlw" path="res://floor.png" id="3_3i41j"]
[ext_resource type="Texture2D" uid="uid://4anw2ean0scn" path="res://grass block.png" id="4_ykm3d"]
[ext_resource type="PackedScene" uid="uid://w2wotp8ph670" path="res://objects/socks.tscn" id="6_1ianm"]
[ext_resource type="PackedScene" uid="uid://cya5b0sccaaj" path="res://objects/sign.tscn" id="6_v4rn8"]
[ext_resource type="PackedScene" uid="uid://dy2hayp7itdtr" path="res://objects/portal.tscn" id="7_b6pk5"]

[sub_resource type="LabelSettings" id="LabelSettings_h7wxp"]
font_size = 52

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1at7p"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6dtub"]
font_size = 52

[sub_resource type="LabelSettings" id="LabelSettings_yh21u"]
font_size = 42

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6d4dk"]
bg_color = Color(0.192157, 0.192157, 0.192157, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x0ug"]
size = Vector2(6050, 20)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ges84"]
texture = ExtResource("4_ykm3d")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_g3n0r"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ges84")

[node name="Level1" type="Node2D"]
script = ExtResource("1_wv010")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_left = -2.0
offset_top = 548.0
offset_right = 452.0
offset_bottom = 647.0

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 448.0
offset_bottom = 91.0
autowrap_mode = 2

[node name="Score" type="Label" parent="CanvasLayer"]
offset_left = 5.0
offset_top = 12.0
offset_right = 172.0
offset_bottom = 87.0
text = "Score: "
label_settings = SubResource("LabelSettings_h7wxp")

[node name="welcomeScreen" type="Panel" parent="CanvasLayer"]
visible = false
offset_right = 1146.0
offset_bottom = 655.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1at7p")

[node name="Label" type="Label" parent="CanvasLayer/welcomeScreen"]
layout_mode = 0
offset_left = 11.0
offset_top = 14.0
offset_right = 436.0
offset_bottom = 89.0
text = "Welcome player!
"
label_settings = SubResource("LabelSettings_6dtub")

[node name="Label2" type="Label" parent="CanvasLayer/welcomeScreen"]
layout_mode = 0
offset_left = 21.0
offset_top = 103.0
offset_right = 1071.0
offset_bottom = 593.0
text = "Your parents have turned the tables and have put you in a video game as a punishment for playing too much.
Your goal is to collect all the socks (and other items) to survive being grounded."
label_settings = SubResource("LabelSettings_yh21u")
autowrap_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/welcomeScreen"]
layout_mode = 0
offset_left = 743.0
offset_top = 523.0
offset_right = 1061.0
offset_bottom = 608.0
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_6d4dk")
text = "Start?"

[node name="PlayerNode" parent="." instance=ExtResource("1_wntg6")]
position = Vector2(40, 348)

[node name="floor" type="StaticBody2D" parent="."]
position = Vector2(-302, 1893)

[node name="CollisionShape2D" type="CollisionShape2D" parent="floor"]
position = Vector2(3015, 0)
shape = SubResource("RectangleShape2D_7x0ug")

[node name="Sprite2D" type="Sprite2D" parent="floor"]
visible = false
position = Vector2(573, 10)
scale = Vector2(18.1094, 10.7813)
texture = ExtResource("3_3i41j")

[node name="Socks" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(757, 543)

[node name="Socks2" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(1551, 263)

[node name="Socks3" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(1973, 247)

[node name="Socks4" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(2303, 261)

[node name="Socks5" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(2673, 255)

[node name="Sign" parent="." instance=ExtResource("6_v4rn8")]
position = Vector2(433, 557)

[node name="Sign2" parent="." instance=ExtResource("6_v4rn8")]
position = Vector2(2836, 277)

[node name="Sign3" parent="." instance=ExtResource("6_v4rn8")]
position = Vector2(3360, 1496)

[node name="Socks6" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(3689, 1074)

[node name="Socks7" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(3893, 1520)

[node name="Socks8" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(4235, 1501)

[node name="Socks9" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(4509, 1491)

[node name="Socks10" parent="." instance=ExtResource("6_1ianm")]
position = Vector2(4658, 1488)

[node name="Portal" parent="." instance=ExtResource("7_b6pk5")]
position = Vector2(4804, 1469)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_g3n0r")
format = 2
layer_0/tile_data = PackedInt32Array(2424832, 196608, 0, 2490368, 131072, 0, 2555904, 196608, 0, 2621440, 131072, 3, 2424833, 196608, 1, 2490369, 65536, 0, 2555905, 0, 3, 2621441, 131072, 1, 2424834, 0, 0, 2490370, 65536, 0, 2555906, 196608, 0, 2621442, 131072, 2, 2424835, 0, 3, 2490371, 0, 3, 2555907, 65536, 2, 2621443, 131072, 1, 2424836, 131072, 2, 2490372, 196608, 3, 2555908, 196608, 2, 2621444, 0, 2, 2424837, 131072, 2, 2490373, 131072, 3, 2555909, 196608, 0, 2621445, 131072, 2, 2424838, 65536, 2, 2490374, 196608, 0, 2555910, 196608, 0, 2621446, 131072, 0, 2424839, 0, 1, 2490375, 65536, 1, 2555911, 65536, 1, 2621447, 196608, 0, 2424840, 65536, 3, 2490376, 65536, 1, 2555912, 65536, 0, 2621448, 131072, 2, 2424841, 196608, 2, 2490377, 65536, 2, 2555913, 131072, 0, 2621449, 0, 1, 2424842, 131072, 2, 2490378, 0, 2, 2555914, 131072, 3, 2621450, 196608, 2, 2424843, 0, 1, 2490379, 0, 3, 2555915, 131072, 2, 2621451, 196608, 2, 2424844, 65536, 3, 2490380, 65536, 2, 2555916, 0, 3, 2621452, 196608, 3, 2424845, 196608, 2, 2490381, 196608, 1, 2555917, 131072, 3, 2621453, 196608, 0, 2424846, 131072, 1, 2490382, 0, 2, 2555918, 0, 1, 2621454, 0, 1, 2424847, 131072, 1, 2490383, 65536, 2, 2555919, 65536, 0, 2621455, 0, 3, 2424848, 0, 0, 2490384, 196608, 1, 2555920, 65536, 1, 2621456, 131072, 1, 2424849, 196608, 2, 2490385, 65536, 1, 2555921, 65536, 2, 2621457, 0, 2, 2424850, 131072, 1, 2490386, 131072, 2, 2555922, 196608, 1, 2621458, 131072, 0, 2424851, 65536, 3, 2490387, 131072, 0, 2555923, 196608, 1, 2621459, 65536, 1, 2424852, 65536, 0, 2490388, 196608, 3, 2555924, 131072, 3, 2621460, 131072, 0, 2424853, 0, 3, 2490389, 131072, 2, 2555925, 65536, 2, 2621461, 0, 2, 2424854, 131072, 0, 2490390, 65536, 0, 2555926, 196608, 1, 2621462, 196608, 3, 2424855, 131072, 1, 2490391, 0, 1, 2555927, 131072, 3, 2621463, 0, 1, 2424856, 0, 1, 2490392, 196608, 3, 2555928, 0, 1, 2621464, 65536, 1, 2424857, 131072, 0, 2490393, 131072, 3, 2555929, 65536, 0, 2621465, 65536, 3, 2424858, 65536, 3, 2490394, 65536, 3, 2555930, 65536, 2, 2621466, 0, 0, 2424859, 0, 1, 2490395, 131072, 1, 2555931, 65536, 0, 2621467, 131072, 3, 2424860, 131072, 0, 2490396, 131072, 2, 2555932, 65536, 0, 2621468, 65536, 0, 2424861, 65536, 2, 2490397, 131072, 1, 2555933, 0, 1, 2621469, 196608, 3, 2424862, 196608, 2, 2490398, 196608, 0, 2555934, 0, 3, 2621470, 0, 1, 2424863, 131072, 3, 2490399, 196608, 1, 2555935, 196608, 2, 2621471, 131072, 0, 2424864, 65536, 3, 2490400, 131072, 3, 2555936, 196608, 2, 2621472, 131072, 0, 2424865, 65536, 1, 2490401, 131072, 1, 2555937, 131072, 3, 2621473, 196608, 2, 2424866, 196608, 3, 2490402, 131072, 2, 2555938, 65536, 0, 2621474, 65536, 3, 2424867, 65536, 3, 2490403, 196608, 0, 2555939, 131072, 0, 2621475, 0, 1, 2424868, 196608, 3, 2490404, 0, 1, 2555940, 65536, 0, 2621476, 0, 0, 2424869, 0, 1, 2490405, 131072, 2, 2555941, 65536, 2, 2621477, 196608, 2, 2424870, 196608, 0, 2490406, 131072, 0, 2555942, 196608, 1, 2621478, 131072, 2, 2424871, 65536, 2, 2490407, 0, 1, 2555943, 0, 2, 2621479, 131072, 1, 2424872, 196608, 2, 2490408, 65536, 1, 2555944, 0, 3, 2621480, 196608, 3, 2424873, 0, 2, 2490409, 65536, 3, 2555945, 196608, 1, 2621481, 196608, 3, 2424874, 0, 1, 2490410, 131072, 3, 2555946, 196608, 0, 2621482, 131072, 0, 2424875, 196608, 2, 2490411, 65536, 3, 2555947, 196608, 0, 2621483, 131072, 1, 2424876, 0, 3, 2490412, 131072, 1, 2555948, 65536, 2, 2621484, 0, 3, 2424877, 131072, 0, 2490413, 131072, 2, 2555949, 0, 0, 2621485, 0, 2, 2424878, 131072, 2, 2490414, 131072, 1, 2555950, 65536, 0, 2621486, 65536, 0, 2424879, 65536, 1, 2490415, 131072, 1, 2555951, 196608, 0, 2621487, 0, 3, 2424880, 196608, 1, 2490416, 196608, 3, 2555952, 196608, 1, 2621488, 131072, 2, 2424881, 65536, 1, 2490417, 65536, 2, 2555953, 196608, 3, 2621489, 131072, 2, 2424882, 196608, 0, 2490418, 131072, 0, 2555954, 65536, 0, 2621490, 196608, 3, 2424883, 196608, 0, 2490419, 131072, 1, 2555955, 196608, 1, 2621491, 0, 2, 2424884, 196608, 1, 2490420, 65536, 2, 2555956, 196608, 2, 2621492, 0, 1, 2424885, 0, 2, 2490421, 65536, 1, 2555957, 131072, 3, 2621493, 65536, 0, 2424886, 0, 1, 2490422, 65536, 0, 2555958, 0, 0, 2621494, 65536, 3, 2424887, 0, 2, 2490423, 0, 1, 2555959, 65536, 1, 2621495, 0, 1, 2424888, 196608, 2, 2490424, 196608, 3, 2555960, 196608, 1, 2621496, 196608, 0, 2424889, 196608, 1, 2490425, 131072, 3, 2555961, 131072, 0, 2621497, 131072, 0, 2424890, 131072, 0, 2490426, 65536, 3, 2555962, 65536, 3, 2621498, 196608, 1, 2424891, 196608, 3, 2490427, 0, 0, 2555963, 131072, 0, 2621499, 196608, 2, 2424892, 65536, 1, 2490428, 131072, 3, 2555964, 0, 3, 2621500, 0, 1, 2424893, 0, 0, 2490429, 131072, 1, 2555965, 65536, 2, 2621501, 196608, 2, 2424894, 65536, 0, 2490430, 131072, 3, 2555966, 131072, 3, 2621502, 131072, 0, 2424895, 0, 1, 2490431, 196608, 3, 2555967, 131072, 1, 2621503, 131072, 2, 2424896, 196608, 2, 2490432, 0, 0, 2555968, 65536, 1, 2621504, 65536, 0, 2424897, 0, 1, 2490433, 65536, 2, 2555969, 0, 3, 2621505, 0, 0, 2424898, 131072, 3, 2490434, 0, 1, 2555970, 131072, 1, 2621506, 0, 3, 2424899, 65536, 2, 2490435, 0, 3, 2555971, 131072, 0, 2621507, 65536, 2, 2424900, 131072, 1, 2490436, 0, 1, 2555972, 65536, 3, 2621508, 196608, 0, 2424901, 0, 3, 2490437, 196608, 2, 2555973, 131072, 3, 2621509, 131072, 0, 2424902, 65536, 2, 2490438, 131072, 0, 2555974, 65536, 2, 2621510, 196608, 1, 2424903, 65536, 0, 2490439, 65536, 2, 2555975, 65536, 2, 2621511, 65536, 3, 2424904, 196608, 0, 2490440, 196608, 0, 2555976, 196608, 1, 2621512, 196608, 0, 2424905, 65536, 0, 2359370, 131072, 1, 2359371, 65536, 0, 2293836, 196608, 0, 2228301, 65536, 0, 2162766, 196608, 1, 2097231, 131072, 3, 2031696, 196608, 0, 2031697, 131072, 0, 1966162, 196608, 2, 1900627, 131072, 3, 1835092, 0, 3, 1769557, 65536, 2, 1704022, 131072, 3, 1704023, 0, 3, 1638488, 65536, 3, 1572953, 65536, 1, 1507418, 131072, 1, 1441883, 65536, 2, 1376348, 131072, 0, 1376349, 196608, 3, 1310814, 196608, 2, 1245279, 65536, 1, 1179744, 65536, 0, 1245280, 196608, 1, 1245281, 196608, 0, 1245282, 0, 0, 1245283, 65536, 0, 1245284, 0, 3, 1245285, 0, 3, 1245286, 65536, 1, 1245287, 131072, 1, 1245288, 196608, 2, 1245289, 131072, 1, 1245290, 65536, 2, 1245291, 0, 1, 1245292, 65536, 1, 1245293, 65536, 0, 1245294, 0, 0, 1245295, 196608, 2, 1245296, 196608, 2, 1245297, 0, 3, 1245298, 0, 3, 1245299, 196608, 1, 1245300, 131072, 0, 1245301, 131072, 1, 1245302, 65536, 2, 1245303, 0, 3, 1245304, 196608, 2, 1245305, 0, 2, 1245306, 131072, 2, 1245307, 65536, 3, 1245308, 0, 1, 1245309, 0, 1, 1245310, 131072, 1, 1245311, 65536, 3, 1245312, 65536, 1, 1245313, 65536, 1, 1245314, 0, 2, 1245315, 65536, 3, 1245316, 0, 0, 1245317, 131072, 2, 1245318, 65536, 0, 1245319, 65536, 3, 1245320, 131072, 3, 1245321, 65536, 3, 1245322, 196608, 2, 1245323, 0, 2, 1245324, 0, 2, 1245325, 65536, 1, 1245326, 131072, 2, 1245327, 0, 3, 1245328, 0, 2, 1245329, 131072, 0, 1245330, 131072, 3, 1245331, 65536, 3, 1245332, 131072, 2, 1245333, 65536, 2, 1245334, 65536, 2, 1245335, 196608, 2, 1245336, 0, 2, 1245337, 65536, 0, 1245338, 0, 3, 1245339, 65536, 2, 1245340, 65536, 0, 1245341, 131072, 0, 1245342, 196608, 0, 1245343, 0, 3, 1245344, 196608, 0, 1245345, 65536, 0, 1245346, 65536, 1, 1245347, 65536, 3, 1245348, 196608, 0, 1245349, 65536, 1, 1245350, 65536, 1, 1245351, 0, 2, 1245352, 0, 0, 1245353, 131072, 2, 1245354, 196608, 1, 1245355, 196608, 0, 1245356, 131072, 3, 1245357, 131072, 1, 1245358, 0, 2, 1245359, 131072, 1, 1245360, 0, 0, 1245361, 131072, 1, 1245362, 65536, 2, 1245363, 0, 0, 1245364, 196608, 2, 1245365, 65536, 3, 7209141, 131072, 0, 7209142, 196608, 3, 7209143, 131072, 2, 7209144, 65536, 3, 7209145, 196608, 0, 7209146, 131072, 1, 7209147, 196608, 1, 7209148, 196608, 0, 7209149, 131072, 0, 7209150, 65536, 1, 7209151, 131072, 2, 7209152, 65536, 1, 7209153, 196608, 3, 7209154, 0, 0, 7209155, 65536, 1, 7209156, 131072, 2, 7209157, 196608, 2, 7209158, 131072, 3, 7209159, 0, 3, 7209160, 131072, 0, 7209161, 0, 0, 7209162, 0, 2, 7209163, 196608, 2, 7143627, 65536, 3, 7078091, 0, 1, 7012556, 65536, 1, 6947020, 131072, 0, 6881485, 0, 3, 6815949, 131072, 3, 6750414, 131072, 1, 6684878, 131072, 1, 6619343, 196608, 2, 6553807, 65536, 3, 6488272, 0, 0, 6422736, 196608, 2, 6357201, 0, 0, 6291665, 0, 2, 6226130, 65536, 3, 6226131, 65536, 3, 6226132, 65536, 2, 6226133, 0, 0, 6291670, 131072, 2, 6291671, 196608, 0, 6291672, 0, 1, 6291673, 0, 2, 6291674, 196608, 1, 6291675, 0, 2, 6291676, 196608, 3, 6357213, 196608, 2, 6357214, 196608, 3, 6357215, 131072, 0, 6357216, 0, 0, 6357217, 65536, 0, 6357218, 196608, 3, 6357219, 131072, 2, 6422756, 0, 0, 6422757, 65536, 3, 6422758, 196608, 3, 6422759, 196608, 2, 6422760, 196608, 1, 6422761, 0, 2, 6422762, 196608, 0, 6488299, 196608, 3, 6488300, 0, 1, 6488301, 131072, 0, 6488302, 65536, 3, 6488303, 65536, 2, 6488304, 131072, 1, 6488305, 65536, 3, 6553842, 196608, 2, 6553843, 0, 0, 6553844, 196608, 0, 6553845, 196608, 2, 5963998, 65536, 0, 5963999, 196608, 1, 5898464, 196608, 2, 5898465, 131072, 0, 5701862, 0, 2, 5701863, 65536, 2, 5636328, 196608, 1, 5636329, 196608, 0, 5570794, 0, 1, 5570795, 131072, 0, 5374191, 0, 3, 5374192, 65536, 2, 5308657, 131072, 2, 5308658, 65536, 2, 5308659, 196608, 1, 5308660, 131072, 3, 5243125, 0, 1, 5243126, 0, 2, 5046522, 196608, 0, 5046523, 196608, 2, 4980988, 65536, 2, 4980989, 131072, 0, 4915454, 131072, 1, 4915455, 196608, 1, 4849920, 131072, 3, 4456677, 0, 1, 4456678, 65536, 2, 4456679, 65536, 1, 4522216, 131072, 0, 4522217, 196608, 3, 4522218, 65536, 2, 4522219, 65536, 2, 4522220, 196608, 2, 4522221, 131072, 2, 4587758, 196608, 1, 4587759, 0, 1, 4587760, 196608, 0, 4587761, 196608, 3, 4587762, 0, 1, 4653299, 131072, 3, 4653300, 0, 1, 4653301, 0, 2, 6488310, 196608, 1, 6488311, 0, 0, 6488312, 0, 2, 6488313, 65536, 0, 6422778, 131072, 0, 6422779, 65536, 3, 6422780, 65536, 0, 6422781, 0, 2, 6357246, 0, 1, 6357247, 0, 3, 6357248, 65536, 2, 6357249, 0, 2, 6291714, 0, 2, 6291715, 65536, 3, 6291716, 65536, 0, 6291717, 131072, 1, 6226182, 131072, 1, 6226183, 196608, 0, 6226184, 196608, 2, 6226185, 65536, 0, 6226186, 131072, 2, 6226187, 65536, 3, 6226188, 65536, 0, 6226189, 131072, 1, 6226190, 65536, 0, 6226191, 131072, 1, 6226192, 0, 2, 6226193, 0, 2, 6226194, 196608, 1, 6226195, 0, 3, 6226196, 131072, 1, 6226197, 0, 1, 6226198, 131072, 2, 6226199, 65536, 1, 6226200, 131072, 1, 6226201, 196608, 1, 6226202, 0, 1, 6226203, 196608, 1, 6226204, 65536, 2, 6226205, 65536, 0, 6226206, 65536, 2, 6226207, 131072, 1, 6226208, 65536, 3, 6226209, 65536, 0, 6226210, 196608, 1, 6226211, 196608, 1, 6226212, 0, 2, 6226213, 0, 0, 6226214, 131072, 1, 6291751, 131072, 0, 6291752, 65536, 1, 6291753, 131072, 0, 6291754, 196608, 3, 6291755, 196608, 2, 6357292, 131072, 0, 6357293, 65536, 1, 6357294, 196608, 0, 6357295, 65536, 1, 6357296, 0, 1, 6422833, 65536, 3, 6422834, 65536, 1, 6422835, 0, 0)

[connection signal="pressed" from="CanvasLayer/welcomeScreen/Button" to="." method="_on_button_pressed"]
[connection signal="body_entered" from="Sign/sign1" to="." method="_on_sign_1_body_entered"]
[connection signal="body_entered" from="Sign2/sign1" to="." method="_on_sign_2_body_entered"]
[connection signal="body_entered" from="Sign3/sign1" to="." method="_on_sign_3_body_entered"]

[editable path="Sign"]
[editable path="Sign2"]
[editable path="Sign3"]
